feat(client): improve species browser and forest layout
Build species buttons dynamically from tracked pets and use a parent-aware forest layout so linked branches stay readable in aggregate node views.